# SubjectiveModeling

./: .gitignore  LICENSE  README.md  subjective-modeling.cabal
examples/: PossibilityExample.hs  SubjectiveModelingExample.hs
src/: Bitopos.hs  Distribution.hs  KanExtension.hs  Quantale.hs  SubjectiveModel.hs
test/: Spec.hs
